fix: footer image no longer appear on mobile
Mobile screen no longer display footer image to
improve ui styling.

--- a/src/styles.css
+++ b/src/styles.css
@@ -411,4 +411,8 @@ footer>img {
     justify-content: center;
   }
 
+  footer>img {
+    display: none;
+  }
+
 }
